--- a/ka-event-core/todo.txt
+++ b/ka-event-core/todo.txt
@@ -1,3 +1,4 @@
 * scan more than one package for annotated classes with ; separated list...
 * Run Find bugs and Check style with maven
+* Instanciate Queue class first with EventSender then use empty constructor... 
 * test, test and test....
