--- a/ka-event-spring/todo.txt
+++ b/ka-event-spring/todo.txt
@@ -1,3 +1,9 @@
 * Set up examples with spring
-* Test method resolving with SpringBeanResolver
 * Set up examples with aspects
+* Fix channels to handle events;
+* Fix KaEventConfigurer spring version... Make sure initalized listeners are called.
+* Add event filtering support to XML
+* Add listeners to XML (EXTEND BEAN)
+* Add transactional support
+* Add Spring integration choice
+* Make sure that no Spring annotated example classes ends up in the built jar!
