--- a/ka-event-spring/todo.txt
+++ b/ka-event-spring/todo.txt
@@ -1,6 +1,3 @@
-* Add transactional support
-* Set up examples with spring
-* Set up examples with aspects
-* Add event filtering support to XML
-* Add Spring integration choice
-* Make sure that no Spring annotated example classes ends up in the built jar!
+To do (remove once moved to JIRA)
+---------------------------------
+* 
