--- a/ka-event-core/todo.txt
+++ b/ka-event-core/todo.txt
@@ -1,3 +1,3 @@
-* scan more than one package for annotated classes with ; separated list...
-* Run Find bugs and Check style with maven
-* test, test and test....
+To do (remove once moved to JIRA)
+---------------------------------
+*
